@@ -10,6 +10,12 @@ plugins {
     id 'java-library'
     id 'com.microsoft.identity.buildsystem' version '0.1.1'
     id 'maven-publish'
+
+    // the below build plugin allows to generate BuildConfig files in a JAVA gradle project.
+    // BuildConfig files are generated by default in an Android project, however, a non-Android java
+    // module doesn't really have a concept of BuildConfig. This plugin allows us to create similar
+    // looking BuildConfig constants in a java project.
+    id 'com.github.gmazzo.buildconfig' version '3.0.0'
 }
 
 def desugarCode = false
@@ -126,9 +132,22 @@ publishing {
     }
 }
 
+def sliceParameter = "" // will be blank unless specified by developer
+def dcParameter = "" // will be blank unless specified by developer
+
+if (project.hasProperty("slice")) {
+    sliceParameter = slice
+}
+
+if (project.hasProperty("dc")) {
+    dcParameter = dc
+}
+
 sourceSets {
     main {
-        java.srcDirs = ['src/main']
+        java.srcDirs = ['src/main', 'build/generated/source/buildConfig/main']
+        buildConfigField("String", "SLICE", "\"$sliceParameter\"")
+        buildConfigField("String", "DC", "\"$dcParameter\"")
     }
     test {
         java.srcDirs = ['src/test']
@@ -155,6 +174,16 @@ dependencies {
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 
+buildConfig {
+    // forces the package (of the generated BuildConfig file). Defaults to '${project.group}'
+    packageName("com.microsoft.identity.common.java")
+    useJavaOutput() // forces the outputType to 'java'
+}
+
 afterEvaluate {
     assemble.dependsOn sourcesJar, javadocJar
+
+    // these tasks are generated by the buildconfig plugin..for more details, read comment about it
+    // above in the plugins block.
+    compileJava.dependsOn generateBuildConfig, generateTestBuildConfig
 }
